--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -3,6 +3,8 @@
 
     <data>
 
+        <import type="tgs.com.mvvm.R.mipmap"></import>
+
         <variable
             name="loginVM"
             type="tgs.com.mvvm.vm.LoginVM"></variable>
@@ -51,8 +53,18 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="200px"
-                bind:click="@{loginVM.loginClick}"
-                android:text="登录"/>
+                android:text="登录"
+                bind:click="@{loginVM.loginClick}"/>
+            
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:layout_width="144px"
+                android:layout_height="144px"
+                bind:imageLocal="@{mipmap.ic_launcher}"/>
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:layout_width="144px"
+                android:layout_height="144px"
+                bind:imageUrl="@{loginVM.img}"
+                />
         </LinearLayout>
 
         <tgs.com.mvvm.weight.RotateLoading
