--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -2,7 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:bind="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -18,7 +19,6 @@
         tools:openDrawer="start">
 
         <android.support.design.widget.CoordinatorLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true">
@@ -26,49 +26,57 @@
             <tgs.com.mvvm.core.autolayout.AutoAppBarLayout
                 android:id="@+id/app_bar"
                 android:layout_width="match_parent"
-                android:layout_height="360px"
+                android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:elevation="10dp"
                 >
 
-                <tgs.com.mvvm.core.autolayout.AutoCollapsingToolbarLayout
-                    android:id="@+id/toolbar_layout"
+                <tgs.com.mvvm.core.autolayout.AutoToolbar
+                    android:id="@+id/toolbar"
+                    style="@style/MyToolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    app:contentScrim="@color/colorPrimary"
-                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
+                    android:layout_height="160px"
+                    app:layout_scrollFlags="scroll|enterAlways"
                     >
 
-                    <TextView
-                        android:id="@+id/imageview"
-                        android:layout_width="match_parent"
-                        android:layout_height="200px"
-                        android:text="个人资料"
-                        />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        bind:click="@{vm.drawerSwitchClick}"
+                        android:orientation="horizontal">
 
-                    <tgs.com.mvvm.core.autolayout.AutoToolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="160px"
-                        android:layout_gravity="bottom"
-                        app:contentInsetLeft="0dp"
-                        app:contentInsetStart="0dp"
-                        >
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_drawer_home"/>
 
-                        <tgs.com.mvvm.core.autolayout.AutoTabLayout
-                            android:id="@+id/tablayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:tabIndicatorColor="@color/white"
-                            app:tabSelectedTextColor="@color/white"
-                            app:tabTextColor="@color/pinkFD"
-                            />
-                    </tgs.com.mvvm.core.autolayout.AutoToolbar>
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="105px"
+                            android:layout_height="105px"
+                            android:layout_marginLeft="45px"
+                            android:src="@drawable/bili_default_image_tv"/>
 
-                </tgs.com.mvvm.core.autolayout.AutoCollapsingToolbarLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="45px"
+                            android:text="田桂森"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp"/>
+
+                    </LinearLayout>
+                </tgs.com.mvvm.core.autolayout.AutoToolbar>
+
+                <tgs.com.mvvm.core.autolayout.AutoTabLayout
+                    android:id="@+id/tablayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    app:tabIndicatorColor="@color/white"
+                    app:tabSelectedTextColor="@color/white"
+                    app:tabTextColor="@color/pinkFD"
+                    />
             </tgs.com.mvvm.core.autolayout.AutoAppBarLayout>
-
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/vp_main"
