--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,11 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:layout_width="200px"
             android:layout_height="200px"
             android:paddingTop="40px"
-            android:src="@drawable/user_img"/>
+            android:src="@drawable/bili_default_image_tv"/>
 
         <ImageView
             android:layout_width="wrap_content"
