--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyToolbar" parent="Widget.AppCompat.Toolbar">
+        <!--去除左边距-->
+        <item name="contentInsetStart">0dp</item>
+    </style>
 </resources>
