--- a/app/src/main/res/layout/fg_test2.xml
+++ b/app/src/main/res/layout/fg_test2.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="vm"
-            type="tgs.com.mvvm.vm.RecommendVM">
+            type="tgs.com.mvvm.vm.Test2VM">
         </variable>
     </data>
 
@@ -14,6 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </layout>
