--- a/app/src/main/res/layout/fg_live.xml
+++ b/app/src/main/res/layout/fg_live.xml
@@ -18,7 +18,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:scrollbars="none">
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </layout>
