--- a/app/src/main/res/layout/item_type0.xml
+++ b/app/src/main/res/layout/item_type0.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="item"
-            type="tgs.com.mvvm.bean.ItemInfo"/>
+            type="tgs.com.mvvm.bean.ItemInfo"></variable>
     </data>
 
     <LinearLayout
