--- a/app/src/main/res/layout/item_long_card.xml
+++ b/app/src/main/res/layout/item_long_card.xml
@@ -10,7 +10,7 @@
     </data>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_long"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
