--- a/app/src/main/res/layout/item_standard_card.xml
+++ b/app/src/main/res/layout/item_standard_card.xml
@@ -12,7 +12,7 @@
     </data>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_standard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
