--- a/app/src/main/res/layout/fg_video_details.xml
+++ b/app/src/main/res/layout/fg_video_details.xml
@@ -1,18 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="vm"
             type="tgs.com.mvvm.vm.VideoDetailsVM"/>
     </data>
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
+        android:clipToPadding="true"
         android:layout_height="match_parent"
-        android:background="#f00"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        tools:ignore="MergeRootFrame"
+        >
 
-    </LinearLayout>
+        <tgs.com.mvvm.core.autolayout.AutoAppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="600px"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <tgs.com.mvvm.core.autolayout.AutoCollapsingToolbarLayout
+                android:id="@+id/ctl"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                app:statusBarScrim="@android:color/transparent"
+                >
+                <View
+                    android:id="@+id/status"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@color/colorPrimary" />
+                <!--封面图片-->
+                <ImageView
+                    android:id="@+id/iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/test_img2"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.7"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="120px"
+                    android:background="@drawable/shape_player_toptab"
+                    android:fitsSystemWindows="true"/>
+
+                <!--按理来说这里放播放器-->
+
+                <tgs.com.mvvm.core.autolayout.AutoToolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+                    <!--自定义带图片的立即播放按钮-->
+                    <android.support.v7.widget.ButtonBarLayout
+                        android:id="@+id/btbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        bind:click="@{vm.barPlay}"
+                        android:paddingLeft="-150px"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="120px"
+                            android:layout_height="120px"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_clip_video_play"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="立即播放"
+                            android:textColor="#ffffff"/>
+                    </android.support.v7.widget.ButtonBarLayout>
+                </tgs.com.mvvm.core.autolayout.AutoToolbar>
+            </tgs.com.mvvm.core.autolayout.AutoCollapsingToolbarLayout>
+        </tgs.com.mvvm.core.autolayout.AutoAppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <tgs.com.mvvm.core.autolayout.AutoTabLayout
+                android:id="@+id/tablayout"
+                android:layout_width="match_parent"
+                android:layout_height="100px"
+                app:tabIndicatorColor="@color/colorPrimary"
+                app:tabSelectedTextColor="@color/colorPrimary"
+                app:tabTextColor="@color/font_normal"
+                app:tabMode="scrollable"
+                />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_details"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+            </android.support.v4.view.ViewPager>
+        </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            bind:click="@{vm.actionPlay}"
+            android:layout_margin="48px"
+            android:src="@drawable/ic_clip_video_play"
+            app:layout_anchor="@id/appbar"
+            app:layout_anchorGravity="bottom|end"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
